--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
+    "redux-devtools": "^3.3.2",
     "sass-loader": "^5.0.1",
     "webpack": "^2.2.1"
   }
