--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
+    "flexboxgrid": "^6.3.1",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-flexbox-grid": "^0.10.2",
     "react-material-icons": "^1.0.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
@@ -31,11 +33,13 @@
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^6.7.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.1",
     "expect": "^1.20.2",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -45,8 +49,11 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^1.3.1",
     "redux-devtools": "^3.3.2",
     "sass-loader": "^5.0.1",
+    "script-loader": "^0.7.0",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1"
   }
 }
