--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
     "expect": "^1.20.2",
+    "extract-text-webpack-plugin": "^2.0.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
