--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "karma start",
     "dev": "npm run lint & npm run devBuild & npm run serve",
     "devBuild": "webpack -w",
-    "productionBuild": "webpack --config webpack.config.production.js",
+    "productionBuild": "webpack -p --config webpack.config.production.js",
     "serve": "node server.js",
     "lint": "eslint src",
     "production": "npm run lint & npm run productionBuild & npm run serve"
