--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.21.2",
     "redux": "^3.6.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "autoprefixer": "^6.7.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-recharts": "^1.1.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
