--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.1",
     "flexboxgrid": "^6.3.1",
     "material-ui": "^0.17.0",
+    "rc-collapse": "^1.6.12",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-flexbox-grid": "^0.10.2",
