--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "recharts": "^0.21.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
