--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-flexbox-grid": "^0.10.2",
+    "react-katex": "^1.1.0",
     "react-material-icons": "^1.0.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
