--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
     "flexboxgrid": "^6.3.1",
+    "html-to-react": "^1.2.4",
     "material-ui": "^0.17.0",
     "rc-collapse": "^1.6.12",
     "react": "^15.4.2",
@@ -41,6 +42,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-recharts": "^1.1.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
