--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
     "flexboxgrid": "^6.3.1",
-    "html-to-react": "^1.2.4",
     "material-ui": "^0.17.0",
     "rc-collapse": "^1.6.12",
     "react": "^15.4.2",
@@ -29,6 +28,7 @@
     "react-flexbox-grid": "^0.10.2",
     "react-katex": "^1.1.0",
     "react-material-icons": "^1.0.1",
+    "react-quill": "^1.0.0-beta-5",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
