--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
     "flexboxgrid": "^6.3.1",
+    "html-to-react": "^1.2.4",
+    "katex": "^0.7.1",
     "material-ui": "^0.17.0",
     "rc-collapse": "^1.6.12",
     "react": "^15.4.2",
@@ -49,6 +51,7 @@
     "css-loader": "^0.26.1",
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.11.1",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
@@ -62,6 +65,7 @@
     "sass-loader": "^5.0.1",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1"
   }
 }
