--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,9 @@
   "plugins": [
     "react"
   ],
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "ecmaFeatures": {
     "arrowFunctions": true,
     "binaryLiterals": true,
