--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-eslint": "^7.1.1",
+    "ejs": "^2.5.6",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.1",
