--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "dev": "npm run lint & npm run devBuild & npm run serve",
-    "devBuild": "webpack -w",
+    "dev": "npm run devBuild & npm run serveDev",
+    "devBuild": "webpack -w --display-error-details",
     "productionBuild": "webpack -p --config webpack.config.production.js",
-    "serve": "node server.js",
+    "serve": "node --harmony server.js",
+    "serveDev": "babel-node server.js",
     "lint": "eslint src",
-    "production": "npm run lint & npm run productionBuild & npm run serve"
+    "prestart": "npm run productionBuild",
+    "start": "export NODE_ENV=production || set NODE_ENV=production && npm run serve"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
     "babel-eslint": "^7.1.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
@@ -43,6 +46,7 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.3",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-recharts": "^1.1.0",
@@ -50,6 +54,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.26.1",
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.0.0",
